RESOLVED FIXED 252471
REGRESSION(260434@main): Broke wiincairo build
https://bugs.webkit.org/show_bug.cgi?id=252471
Summary REGRESSION(260434@main): Broke wiincairo build
WebKit Commit Bot
Reported 2023-02-17 03:47:00 PST
https://commits.webkit.org/260434@main introduced a regression: Broke wiincairo build This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 260434@main (2.61 KB, patch)
2023-02-17 03:47 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2023-02-17 03:47:08 PST
Created attachment 465050 [details] REVERT of 260434@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2023-02-17 03:52:16 PST
Committed 260438@main (9507e964d302): <https://commits.webkit.org/260438@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465050 [details].
Radar WebKit Bug Importer
Comment 3 2023-02-17 03:53:16 PST
Note You need to log in before you can comment on or make changes to this bug.