Cherry-pick 260438@main (9507e964d302). https://bugs.webkit.org/show_bug.cgi?id=252471

Unreviewed, reverting r260434@main.
    https://bugs.webkit.org/show_bug.cgi?id=252471

    Broke wiincairo build

    Reverted changeset:

    "REGRESSION(256571@main): DrawingAreaCoordinatedGraphics should handle registering scrolling trees"
    https://bugs.webkit.org/show_bug.cgi?id=252462
    https://commits.webkit.org/260434@main

    Canonical link: https://commits.webkit.org/260438@main